# thesis

./: .gitignore  .tags  .tags1  DEFAULT_FASTRTPS_PROFILES.xml  README.md  TAGS  USER_QOS_PROFILES.xml
Node-RED/: nodered_flow  nodered_flow.json
builtin_interfaces/: CMakeLists.txt  package.xml
common_interfaces/actionlib_msgs/: CMakeLists.txt
common_interfaces/diagnostic_msgs/: CMakeLists.txt
common_interfaces/geometry_msgs/: CMakeLists.txt
common_interfaces/nav_msgs/: CMakeLists.txt
common_interfaces/sensor_msgs/: CMakeLists.txt
common_interfaces/shape_msgs/: CMakeLists.txt
common_interfaces/std_msgs/: CMakeLists.txt
common_interfaces/std_srvs/: CMakeLists.txt
common_interfaces/trajectory_msgs/: CMakeLists.txt
common_interfaces/visualization_msgs/: CMakeLists.txt
demo_vids/: demo_only_nettools.mkv
demos/demo_nodes_py/demo_nodes_py/topics/: talker_qos.py
demos/image_tools/: README.md
demos/image_tools/src/: cam2image.cpp  showimage.cpp
demos/topic_monitor/topic_monitor/scripts/: topic_monitor.py
detection/: CMakeLists.txt  README.md  package.xml  setup.py
detection/include/: detection.hpp  options.hpp  position_estimation.hpp  roi_compactor.hpp  target_publisher.hpp  unified_target_publisher.hpp  visibility_control.h
detection/launch/: detection_components.launch.py  detection_localization.launch.py  detection_localization_unified.launch.py  detection_stfpub_targetpub.launch.py  estimation_target_tranform_publisher.launch.py  image_and_detection.launch.py  static_transform_target_publisher.launch.py  stfpub_targetpub.launch.py
detection/scripts/: target_publisher.py
detection/src/: detection.cpp  detection_publisher.cpp  detection_subscriber.cpp  options.cpp  position_estimation.cpp  roi_compactor.cpp  target_publisher.cpp  unified_target_publisher.cpp
domain_change/: README.md
domain_change/image/: config_image.xml  config_image2.xml
domain_change/roi/: config_roi.xml
face_detection/: CMakeLists.txt  package.xml
face_detection/include/: options.hpp
face_detection/src/: detection_publisher.cpp  detection_subscriber.cpp  options.cpp
firos2/fiware/: docker-compose.yml
firos2/orion/: config.xml  config_pub.xml  config_sub.xml
firos2_examples/: README.md
firos2_examples/PointHeader_to_fiware/: CMakeLists.txt  PointHeader_.cxx  PointHeader_.h  PointHeader_PubSubMain.cxx  PointHeader_PubSubTypes.cxx  PointHeader_PubSubTypes.h  PointHeader_Publisher.cxx  PointHeader_Publisher.h  PointHeader_Subscriber.cxx  PointHeader_Subscriber.h  cb_create_point.cpp  cb_get_point.cpp  config_pub.xml  userlib.cpp
firos2_examples/PointHeader_to_fiware/idl/: PointHeader_.idl
firos2_examples/point_to_fiware/: CMakeLists.txt  Point_.cxx  Point_.h  Point_PubSubMain.cxx  Point_PubSubTypes.cxx  Point_PubSubTypes.h  Point_Publisher.cxx  Point_Publisher.h  Point_Subscriber.cxx  Point_Subscriber.h  cb_create_point.cpp  cb_get_point.cpp  config_pub.xml  userlib.cpp
firos2_examples/point_to_fiware/idl/: Point_.idl
firos2_examples/roi_to_fiware/: CMakeLists2.txt  RoiWithHeaderCompact_.cxx  RoiWithHeaderCompact_.h  RoiWithHeaderCompact_PubSubMain.cxx  RoiWithHeaderCompact_PubSubTypes.cxx  RoiWithHeaderCompact_PubSubTypes.h  RoiWithHeaderCompact_Publisher.cxx  RoiWithHeaderCompact_Publisher.h  RoiWithHeaderCompact_Subscriber.cxx  RoiWithHeaderCompact_Subscriber.h  cb_create_roi.cpp  cb_get_roi.cpp  config_pub.xml  userlib.cpp
firos2_examples/roi_to_fiware/idl/: RoiWithHeaderCompact_.idl
fiware/: README.md
maps/: corridor_0.01.pgm
maps/karto/: map_server_params.yaml
mediator/: package.xml  setup.cfg  setup.py
mediator/mediator/: mediator.py
monitor/: package.xml  setup.cfg  setup.py
monitor/monitor/: monitor.py
monitorcpp/: CMakeLists.txt  package.xml
monitorcpp/include/monitorcpp/: optionsmonitor.hpp
monitorcpp/src/: latency.cpp  monitor.cpp  options.cpp  throughput.cpp
nettools/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
nettools/include/nettools/: latency.hpp  options.hpp  throughput.hpp  var_len_options.hpp
nettools/launch/: latency.launch.py  throughput.launch.py
nettools/msg/: TopicStatistics.msg
nettools/scripts/: nettools_plotter.py  variable_length_pub.py
nettools/src/: latency.cpp  options.cpp  throughput.cpp  var_len_options.cpp  variable_length_pub.cpp
nettools_msgs/: CMakeLists.txt  README.md  package.xml
nettools_msgs/msg/: ByteArray.msg  PointHeader.msg  RoiWithHeader.msg  RoiWithHeaderCompact.msg  StatisticsMeasurements.msg  TopicStatistics.msg
pub_profile/: DEFAULT_FASTRTPS_PROFILES.xml
sub_profile/: DEFAULT_FASTRTPS_PROFILES.xml
