<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection</name>
  <version>0.0.0</version>
  <description>A ROS2 package that initializes a node that subscribes to an Image topic and performs face or body detection on images using OpenCV objdetect library and publishes the region of interest</description>
  <maintainer email="pantphotiou@gmail.com">Pantelis Photiou</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_copyright</buildtool_depend>
  <buildtool_depend>ament_pep257</buildtool_depend>
  <buildtool_depend>ament_pep8</buildtool_depend>
  <buildtool_depend>ament_pyflakes</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nettools_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nettools_msgs</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
