<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection</name>
  <version>0.0.0</version>
  <description>A ROS2 package that initializes a node that subscribes to an Image topic and performs face or body detection on images using OpenCV objdetect library and publishes the region of interest</description>
  <maintainer email="pantphotiou@gmail.com">Pantelis Photiou</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_copyright</buildtool_depend>
  <buildtool_depend>ament_pep257</buildtool_depend>
  <buildtool_depend>ament_pep8</buildtool_depend>
  <buildtool_depend>ament_pyflakes</buildtool_depend>

  <build_depend>ament_index_cpp</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>composition</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nettools_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>

  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>composition</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nettools_msgs</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>kdl_parser</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
